# serializer version: 1
# name: test_parsed_result[Combination list]
  ParsedText(
    code_block_indents=list([
      None,
      None,
      None,
    ]),
    lines=list([
      dict({
        'parents': list([
        ]),
        'parsed': ParsedLine(
          content='- item 1',
          indent='',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='* item 2',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='* item 2',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='1. item 3',
          indent='        ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
    ]),
    new_contents=list([
      '- item 1',
      '- item 2',
      '1. item 3',
    ]),
    new_indents=list([
      '',
      '    ',
      '        ',
    ]),
  )
# ---
# name: test_parsed_result[Corrected Indentation from 3x]
  ParsedText(
    code_block_indents=list([
      None,
      None,
      None,
      None,
    ]),
    lines=list([
      dict({
        'parents': list([
        ]),
        'parsed': ParsedLine(
          content='- item 1',
          indent='',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 2',
          indent='   ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='   ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 3',
          indent='      ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='   ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 3',
            indent='      ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 4',
          indent='         ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
    ]),
    new_contents=list([
      '- item 1',
      '- item 2',
      '- item 3',
      '- item 4',
    ]),
    new_indents=list([
      '',
      '    ',
      '        ',
      '            ',
    ]),
  )
# ---
# name: test_parsed_result[Dashed list]
  ParsedText(
    code_block_indents=list([
      None,
      None,
    ]),
    lines=list([
      dict({
        'parents': list([
        ]),
        'parsed': ParsedLine(
          content='- item 1',
          indent='',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 2',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
    ]),
    new_contents=list([
      '- item 1',
      '- item 2',
    ]),
    new_indents=list([
      '',
      '    ',
    ]),
  )
# ---
# name: test_parsed_result[Handle Jagged Indents 2x]
  ParsedText(
    code_block_indents=list([
      None,
      None,
      None,
      None,
      None,
      None,
      None,
      None,
    ]),
    lines=list([
      dict({
        'parents': list([
        ]),
        'parsed': ParsedLine(
          content='- item 1',
          indent='',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 2',
          indent='  ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='  ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 3',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='  ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 3',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 4',
          indent='      ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='  ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 3',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 4',
            indent='      ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 5',
          indent='        ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='  ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 6',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='- item 2',
            indent='  ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='- item 7',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
          ParsedLine(
            content='- item 6',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
      }),
      dict({
        'parents': list([
        ]),
        'parsed': ParsedLine(
          content='- item 8',
          indent='',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
          ParsedLine(
            content='- item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
      }),
    ]),
    new_contents=list([
      '- item 1',
      '- item 2',
      '- item 3',
      '- item 4',
      '- item 5',
      '- item 6',
      '- item 7',
      '- item 8',
    ]),
    new_indents=list([
      '',
      '    ',
      '        ',
      '            ',
      '                ',
      '        ',
      '        ',
      '',
    ]),
  )
# ---
# name: test_parsed_result[Numbered list]
  ParsedText(
    code_block_indents=list([
      None,
      None,
      None,
      None,
      None,
      None,
    ]),
    lines=list([
      dict({
        'parents': list([
        ]),
        'parsed': ParsedLine(
          content='1. item 1',
          indent='',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='1. item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='1. item 2-a',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='1. item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='1. item 2-a',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='1. item 3-a',
          indent='        ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='1. item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='2. item 2-b',
          indent='    ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='1. item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='2. item 2-b',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='1. item 3-b',
          indent='        ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
          ParsedLine(
            content='1. item 3-a',
            indent='        ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
      }),
      dict({
        'parents': list([
          ParsedLine(
            content='1. item 1',
            indent='',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='2. item 2-b',
            indent='    ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
        'parsed': ParsedLine(
          content='2. item 3-b',
          indent='        ',
          syntax=<Syntax.LIST: 'LIST'>,
        ),
        'prev_list_peers': list([
          ParsedLine(
            content='1. item 3-b',
            indent='        ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
          ParsedLine(
            content='1. item 3-a',
            indent='        ',
            syntax=<Syntax.LIST: 'LIST'>,
          ),
        ]),
      }),
    ]),
    new_contents=list([
      '1. item 1',
      '1. item 2-a',
      '1. item 3-a',
      '1. item 2-b',
      '1. item 3-b',
      '1. item 3-b',
    ]),
    new_indents=list([
      '',
      '    ',
      '        ',
      '    ',
      '        ',
      '        ',
    ]),
  )
# ---
